test/conformance/chainsaw/validating-policies/report/background/background-reconcile-on-matchconstraints-change/cronjob.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: test-cronjob-stale-report-cleanup
spec:
  schedule: "*/5 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: test
            image: public.ecr.aws/docker/library/busybox:latest
            command: ["/bin/sh", "-c", "echo hello"]
          restartPolicy: OnFailure
