test/conformance/chainsaw/validating-policies/report/background/background-reconcile-on-matchconstraints-change/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-stale-report-cleanup
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: public.ecr.aws/docker/library/nginx:latest
