test/conformance/chainsaw/validating-policies/report/background/background-reconcile-on-matchconstraints-change/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: vpol-stale-report-cleanup
spec:
  evaluation:
    admission:
      enabled: false
    background:
      enabled: true
  validationActions:
  - Audit
  matchConstraints:
    resourceRules:
    - apiGroups:   [apps]
      apiVersions: [v1]
      operations:  [CREATE, UPDATE]
      resources:   [deployments]
    - apiGroups:   [batch]
      apiVersions: [v1]
      operations:  [CREATE, UPDATE]
      resources:   [cronjobs]
  validations:
    - expression: "1 == 0"
      message: always-fail
