test/conformance/chainsaw/validating-policies/report/background/background-reconcile-on-matchconstraints-change/policy-assert.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: vpol-stale-report-cleanup
status:
  conditionStatus:
    conditions:
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
      type: RBACPermissionsGranted
    ready: true
