test/conformance/chainsaw/validating-policies/report/background/background-reconcile-on-matchconstraints-change/report-cronjob-error.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: batch/v1
    kind: CronJob
    name: test-cronjob-stale-report-cleanup
