test/conformance/chainsaw/validating-policies/report/background/background-reconcile-on-matchconstraints-change/report-deployment-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: test-deployment-stale-report-cleanup
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: test-deployment-stale-report-cleanup
results:
- message: always-fail
  policy: vpol-stale-report-cleanup
  result: fail
  scored: true
  source: KyvernoValidatingPolicy
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
